Test/Int/Arith.expected
Test/Int/Arith.lean:4:2: error: [norm_num]: could not prove False
